# SEO-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md
prisma/: schema.prisma
src/backend/: main.py  pyproject.toml
src/backend/api/routes/: __init__.py  pages.py  scans.py  sites.py  websocket.py
src/backend/config/: settings.py
src/backend/crawler/: __init__.py  engine.py
src/backend/models/: __init__.py  orm.py  schemas.py
src/backend/services/: ai.py  scoring.py  ws_manager.py
src/backend/utils/: database.py
src/frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
src/frontend/app/: layout.tsx
src/frontend/app/dashboard/: page.tsx
src/frontend/app/issues/: page.tsx
src/frontend/app/trends/: page.tsx
src/frontend/components/charts/: MultiTrendLine.tsx  TrendLine.tsx
src/frontend/components/drawers/: PageDiagnosisDrawer.tsx
src/frontend/components/layout/: Shell.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/frontend/components/ui/: MetricCard.tsx  ScoreBadge.tsx  Skeleton.tsx
src/frontend/hooks/: useWebSocket.ts
src/frontend/lib/: api.ts  websocket.ts
src/frontend/styles/: globals.css
src/frontend/types/: index.ts
src/shared/constants/: scoring.ts
src/shared/types/: index.ts
