[project]
name = "seo-analyzer-backend"
version = "0.1.0"
description = "SEO Analyzer FastAPI Backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.6.0",
    "cuid>=0.3.0",
    "anthropic>=0.40.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.18",
]

[tool.uv]
managed = true
